Update to work with new Space API

--- a/Spacefile.yaml
+++ b/Spacefile.yaml
@@ -16,10 +16,10 @@
 #
 
 _info:
-    title: String manipulation library
+    title: String manipulation module
 
 _dep_install:
     _info:
         title: Verify dependencies for this module.
     _env:
-        - CMD: :
+        - RUN: :
