--- a/test/test.yaml
+++ b/test/test.yaml
@@ -40,7 +40,7 @@ _platforms:
 _tests:
     -
         -
-            @include: @{DIR}/../Spacefile.yaml|/_install/
+            @include: @{DIR}/../Spacefile.yaml|/_dep_install/
         -
             _env:
                 - RUN: _TEST_STRING_TRIM
