--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ alpine_test_module:
 arch_test_module:
   image: finalduty/archlinux:monthly
   script:
-    - pacman -Sy --noconfirm curl git
+    - pacman -Sy --noconfirm git
     - git clone https://gitlab.com/space-sh/space.git
     - cd space && ./space /install/ && cd ..
     - mkdir ~/.ssh
